--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/styles.css"> <!-- Importing styles.css -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to Excursion</h1>
+        <h1 id="header">Discover hidden places in the world around you</h1>
     </header>
     <main>
-        <p>Explore the world with us!</p>
+        <a>Download Excursion (Coming soon!)</a>
     </main>
     <footer>
         <p>&copy; 2023 Excursion. All rights reserved.</p>
